	- Changed M() and Z() functions to return NULL if requested
	  dimension is not available
	- Much faster transform() function, caching proj4 objects

PostGIS 1.0.6CVS
	- Fixed palloc(0) call in collection deserializer (only gives
	  problem with --enable-cassert)
	- Fixed bbox cache handling bugs
	- Fixed geom_accum(NULL, NULL) segfault
	- Initial support for postgresql 8.2

PostGIS 1.0.5
2005/11/25
	- New "Reporting Bugs" chapter in manual
	- Segfault fix in shp2pgsql (utf8 encoding)
	- Fixed computation of null values fraction in analyzer
	- Fixed return code of shp2pgsql
	- Fixed handling of trailing dots in dbf numerical attributes
	- Schema aware postgis_proc_upgrade.pl, support for pgsql 7.2+
	- Fixed a small bug in the getPoint4d_p() low-level function
	- Fixed memory alignment problems
	- Speedup of serializer functions
	- Bug fix in force_4d, force_3dm and force_3dz functions

PostGIS 1.0.4
2005/09/09
	- Memory leak plugged in GiST indexing
	- Segfault fix in transform() handling of proj4 errors
	- Fixed some proj4 texts in spatial_ref_sys (missing +proj)
	- GiST indexing cleanup
	- Loader: fixed string functions usage, reworked NULL objects check,
	  fixed segfault on MULTILINESTRING input.
	- Fixed bug in MakeLine dimension handling
	- Looser syntax acceptance in box3d parser
	- Documentation improvements
	- More robust selectivity estimator
	- Minor speedup in distance()
	- Minor cleanups
	- Fixed bug in translate() corrupting output bounding box
	- Initial implementation of postgis_proc_upgrade script

PostGIS 1.0.3
2005/08/08
	- Severe bugfix in lwgeom's 2d bounding box computation
	- Bugfix in WKT (-w) POINT handling in loader
	- Bugfix in dumper on 64bit machines
	- Bugfix in dumper handling of user-defined queries 
	- Bugfix in create_undef.pl script
	- Small performance improvement in canonical input function
	- Minor cleanups in loader
	- Support for multibyte field names in loader
	- Improvement in the postgis_restore.pl script